--- a/index.html
+++ b/index.html
@@ -1,71 +1,156 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Metocard AI</title>
+    <title>Metocart AI</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
-            font-family: Arial;
-            text-align: center;
-            margin-top: 50px;
-            background: #f4f4f4;
+            font-family: Arial, sans-serif;
+            background: #f4f6f8;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
+
+        h1 {
+            margin-top: 30px;
+            color: #222;
+        }
+
+        #chat-box {
+            width: 90%;
+            max-width: 700px;
+            height: 400px;
+            background: white;
+            border-radius: 10px;
+            padding: 15px;
+            overflow-y: auto;
+            box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+            margin-top: 20px;
+        }
+
+        .user {
+            text-align: right;
+            margin: 10px 0;
+            color: #0d6efd;
+        }
+
+        .bot {
+            text-align: left;
+            margin: 10px 0;
+            color: #333;
+        }
+
+        #input-area {
+            margin: 20px;
+            width: 90%;
+            max-width: 700px;
+            display: flex;
+        }
+
         input {
-            width: 60%;
-            padding: 10px;
+            flex: 1;
+            padding: 12px;
+            border-radius: 6px 0 0 6px;
+            border: 1px solid #ccc;
+            font-size: 14px;
         }
+
         button {
-            padding: 10px 20px;
-            background: #007bff;
-            color: white;
+            padding: 12px 20px;
             border: none;
+            background: #0d6efd;
+            color: white;
+            border-radius: 0 6px 6px 0;
             cursor: pointer;
         }
-        #response {
-            margin-top: 20px;
-            width: 70%;
-            margin-left: auto;
-            margin-right: auto;
-            text-align: left;
-            background: white;
-            padding: 15px;
-            border-radius: 8px;
+
+        button:hover {
+            background: #0b5ed7;
+        }
+
+        .loading {
+            font-style: italic;
+            color: gray;
         }
     </style>
 </head>
 <body>
 
-<h1>Metocard AI - Business Assistant</h1>
+<h1>Metocart AI - Business Assistant</h1>
 
-<input type="text" id="question" placeholder="Ask your business question..." />
-<button onclick="askAI()">Ask</button>
+<div id="chat-box"></div>
 
-<div id="response"></div>
+<div id="input-area">
+    <input type="text" id="question" placeholder="Ask your business question..." />
+    <button onclick="askAI()">Ask</button>
+</div>
 
 <script>
+const API_KEY = "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";  // <-- PUT YOUR KEY HERE
+
 async function askAI() {
-    const question = document.getElementById("question").value;
+    const questionInput = document.getElementById("question");
+    const chatBox = document.getElementById("chat-box");
+    const question = questionInput.value.trim();
 
-    document.getElementById("response").innerText = "Thinking...";
+    if (!question) return;
 
-    const response = await fetch("https://openrouter.ai/api/v1/chat/completions", {
-        method: "POST",
-        headers: {
-            "Authorization": "Bearer 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",
-            "Content-Type": "application/json"
-        },
-        body: JSON.stringify({
-            model: "openai/gpt-3.5-turbo",
-            messages: [
-                { role: "system", content: "You are a smart AI business assistant." },
-                { role: "user", content: question }
-            ]
-        })
-    });
+    // Show user message
+    chatBox.innerHTML += `<div class="user"><b>You:</b> ${question}</div>`;
+    questionInput.value = "";
 
-    const data = await response.json();
-    document.getElementById("response").innerText =
-        data.choices[0].message.content;
+    // Show loading
+    const loadingDiv = document.createElement("div");
+    loadingDiv.className = "bot loading";
+    loadingDiv.innerHTML = "Metocart AI is thinking...";
+    chatBox.appendChild(loadingDiv);
+    chatBox.scrollTop = chatBox.scrollHeight;
+
+    try {
+        const response = await fetch("https://openrouter.ai/api/v1/chat/completions", {
+            method: "POST",
+            headers: {
+                "Authorization": "Bearer " + API_KEY,
+                "Content-Type": "application/json",
+                "HTTP-Referer": "https://mohammedsammkhan-droid.github.io",
+                "X-Title": "Metocart AI"
+            },
+            body: JSON.stringify({
+                model: "openai/gpt-3.5-turbo",
+                messages: [
+                    { role: "system", content: "You are an expert business assistant helping with startup ideas, market research, and growth strategies." },
+                    { role: "user", content: question }
+                ]
+            })
+        });
+
+        const data = await response.json();
+        loadingDiv.remove();
+
+        if (!response.ok) {
+            chatBox.innerHTML += `<div class="bot">Error: ${JSON.stringify(data)}</div>`;
+            return;
+        }
+
+        const answer = data.choices[0].message.content;
+        chatBox.innerHTML += `<div class="bot"><b>Metocart AI:</b> ${answer}</div>`;
+        chatBox.scrollTop = chatBox.scrollHeight;
+
+    } catch (error) {
+        loadingDiv.remove();
+        chatBox.innerHTML += `<div class="bot">Network error. Please try again.</div>`;
+    }
 }
+
+// Press Enter to send
+document.getElementById("question").addEventListener("keypress", function(e) {
+    if (e.key === "Enter") {
+        askAI();
+    }
+});
 </script>
 
 </body>
