--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ async function askAI() {
     if (!question) return;
 
     chat.innerHTML += `<div class="user"><b>You:</b> ${question}</div>`;
-    input.value = "";
+    input.value = "llama-3.1-8b-instant";
 
     chat.innerHTML += `<div class="bot">Thinking...</div>`;
     chat.scrollTop = chat.scrollHeight;
@@ -70,7 +70,7 @@ async function askAI() {
                 "Content-Type": "application/json"
             },
             body: JSON.stringify({
-                model: "llama3-8b-8192",
+                model: "",
                 messages: [
                     { role: "system", content: "You are a business expert AI assistant." },
                     { role: "user", content: question }
