--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ async function askAI() {
                 "Content-Type": "application/json"
             },
             body: JSON.stringify({
-                model: "llama3-70b-8192",
+               model: "llama-3.1-8b-instant", 
                 messages: [
                     { role: "system", content: "You are a business expert AI assistant." },
                     { role: "user", content: question }
