--- a/index.html
+++ b/index.html
@@ -1,144 +1,56 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Metocart AI - Business Assistant</title>
+    <title>Metocart AI - Business Intelligence Platform</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
 body {
     font-family: 'Segoe UI', sans-serif;
-    background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
     margin: 0;
     padding: 0;
+    background: #0f2027;
     color: white;
 }
 
-/* NAVBAR */
 .navbar {
-    background: rgba(0,0,0,0.7);
-    padding: 15px 30px;
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    padding: 15px 30px;
+    background: #111;
 }
 
 .logo {
     font-weight: bold;
-    font-size: 18px;
 }
 
-.nav-links a {
-    color: white;
-    margin-left: 20px;
-    text-decoration: none;
-    font-size: 14px;
-}
-
-.nav-links a:hover {
-    text-decoration: underline;
-}
-
-/* MAIN */
-.main-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.dashboard {
     padding: 30px;
+    max-width: 1200px;
+    margin: auto;
 }
 
-.header {
-    text-align: center;
+.section {
+    background: #1c1c1c;
+    padding: 20px;
+    border-radius: 12px;
     margin-bottom: 20px;
 }
 
-.animated-title {
-    font-size: 32px;
-    margin: 0;
-    animation: fadeIn 1.5s ease-in-out;
-}
-
-.subtitle {
-    margin: 5px 0;
-    font-size: 14px;
-    letter-spacing: 1px;
-    color: #ddd;
-}
-
-.tagline {
-    font-size: 13px;
-    color: #aaa;
-}
-
-/* CHAT BOX */
-.chat-container {
-    width: 95%;
-    max-width: 750px;
-    background: white;
-    border-radius: 15px;
-    padding: 20px;
-    box-shadow: 0 15px 40px rgba(0,0,0,0.3);
-    display: flex;
-    flex-direction: column;
-}
-
-#chat-box {
-    height: 420px;
-    overflow-y: auto;
-    border-radius: 10px;
-    padding: 15px;
-    background: #f4f6f8;
-    margin-bottom: 15px;
-    color: black;
-}
-
-/* CHAT BUBBLES */
-.user {
-    text-align: right;
-    margin: 10px 0;
-}
-
-.user span {
-    background: #007bff;
-    color: white;
-    padding: 8px 12px;
-    border-radius: 15px;
-    display: inline-block;
-    max-width: 75%;
-}
-
-.bot {
-    text-align: left;
-    margin: 10px 0;
-}
-
-.bot span {
-    background: #e9ecef;
-    padding: 10px 12px;
-    border-radius: 15px;
-    display: inline-block;
-    max-width: 80%;
-}
-
-/* INPUT */
-.input-area {
-    display: flex;
-}
-
 input {
-    flex: 1;
     padding: 10px;
-    border-radius: 8px;
-    border: 1px solid #ccc;
-    font-size: 14px;
+    width: 100%;
+    margin-bottom: 10px;
+    border-radius: 6px;
+    border: none;
 }
 
 button {
     padding: 10px 15px;
-    border-radius: 8px;
+    border-radius: 6px;
     border: none;
     background: #007bff;
     color: white;
-    margin-left: 5px;
     cursor: pointer;
 }
 
@@ -146,134 +58,301 @@ button:hover {
     background: #0056b3;
 }
 
-/* ANIMATION */
-@keyframes fadeIn {
-    from { opacity: 0; transform: translateY(-10px); }
-    to { opacity: 1; transform: translateY(0); }
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 15px;
+}
+
+td, th {
+    border: 1px solid #333;
+    padding: 8px;
+    text-align: center;
 }
 </style>
 </head>
 
 <body>
 
-<nav class="navbar">
+<div class="navbar">
     <div class="logo">🚀 Metocart AI</div>
-    <div class="nav-links">
-        <a href="#">Home</a>
-        <a href="#">Features</a>
-        <a href="#">About</a>
-    </div>
-</nav>
+</div>
 
-<div class="main-container">
+<div class="dashboard">
 
-    <div class="header">
-        <h1 class="animated-title">Metocart AI</h1>
-        <p class="subtitle">Business Assistant</p>
-        <p class="tagline">Build Smart. Start Smart. Grow Fast.</p>
-    </div>
+<div class="section">
+<h2>📊 Budget-Based Business Plan Generator</h2>
+<input type="text" id="idea" placeholder="Enter Business Idea">
+<input type="number" id="budget" placeholder="Enter Budget (₹)">
+<button onclick="generatePlan()">Generate Business Plan</button>
+<div id="planOutput"></div>
+</div>
 
-    <div class="chat-container">
-        <div id="chat-box"></div>
+<div class="section">
+<h2>💰 Profit Estimation Calculator</h2>
+<input type="number" id="investment" placeholder="Initial Investment">
+<input type="number" id="monthlyRevenue" placeholder="Expected Monthly Revenue">
+<input type="number" id="monthlyCost" placeholder="Monthly Operating Cost">
+<button onclick="calculateProfit()">Calculate Profit</button>
 
-        <div class="input-area">
-            <input type="text" id="question" placeholder="Ask your business question..." />
-            <button onclick="askAI()">Ask</button>
-            <button onclick="clearChat()">Clear</button>
-        </div>
-    </div>
+<div id="profitTable"></div>
+</div>
+
+<div class="section">
+<h2>🎤 Investor Pitch Generator</h2>
+<button onclick="generatePitch()">Generate Investor Pitch</button>
+<div id="pitchOutput"></div>
+</div>
+
+<div class="section">
+<h2>📺 YouTube Business Channel Strategy</h2>
+<button onclick="generateVideoPlan()">Generate Video Strategy</button>
+<div id="videoOutput"></div>
+</div>
 
 </div>
 
 <script>
+const API_KEY = "<!DOCTYPE html>
+<html>
+<head>
+    <title>Metocart AI - Business Intelligence Platform</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-const API_KEY = "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"; // 🔴 Replace this
-
-async function askAI() {
-    const input = document.getElementById("question");
-    const chat = document.getElementById("chat-box");
-    const question = input.value.trim();
-    if (!question) return;
-
-    chat.innerHTML += `
-        <div class="user">
-            <span>${question}</span>
-        </div>
-    `;
-
-    input.value = "";
-
-    const loaderId = "loader-" + Date.now();
-
-    chat.innerHTML += `
-        <div class="bot" id="${loaderId}">
-            <span><i>Metocart AI is thinking...</i></span>
-        </div>
-    `;
-
-    chat.scrollTo({ top: chat.scrollHeight, behavior: "smooth" });
-
-    try {
-        const response = await fetch("https://api.groq.com/openai/v1/chat/completions", {
-            method: "POST",
-            headers: {
-                "Authorization": "Bearer " + API_KEY,
-                "Content-Type": "application/json"
-            },
-            body: JSON.stringify({
-                model: "llama-3.1-8b-instant",
-                messages: [
-                    { role: "system", content: "You are a professional business consultant AI. Give structured answers with headings, bullet points and clear formatting." },
-                    { role: "user", content: question }
-                ]
-            })
-        });
-
-        const data = await response.json();
-        document.getElementById(loaderId)?.remove();
-
-        if (!response.ok) {
-            chat.innerHTML += `
-                <div class="bot">
-                    <span>Error: ${JSON.stringify(data)}</span>
-                </div>
-            `;
-            return;
-        }
-
-        const formatted = data.choices[0].message.content
-            .replace(/\n/g, "<br>")
-            .replace(/\*\*(.*?)\*\*/g, "<strong>$1</strong>");
-
-        chat.innerHTML += `
-            <div class="bot">
-                <span>${formatted}</span>
-            </div>
-        `;
-
-        chat.scrollTo({ top: chat.scrollHeight, behavior: "smooth" });
-
-    } catch (err) {
-        document.getElementById(loaderId)?.remove();
-        chat.innerHTML += `
-            <div class="bot">
-                <span>Network error. Please try again.</span>
-            </div>
-        `;
-    }
+<style>
+body {
+    font-family: 'Segoe UI', sans-serif;
+    margin: 0;
+    padding: 0;
+    background: #0f2027;
+    color: white;
 }
 
-function clearChat() {
-    document.getElementById("chat-box").innerHTML = "";
+.navbar {
+    display: flex;
+    justify-content: space-between;
+    padding: 15px 30px;
+    background: #111;
 }
 
-document.getElementById("question")
-.addEventListener("keypress", function(e) {
-    if (e.key === "Enter") {
-        askAI();
-    }
-});
+.logo {
+    font-weight: bold;
+}
 
+.dashboard {
+    padding: 30px;
+    max-width: 1200px;
+    margin: auto;
+}
+
+.section {
+    background: #1c1c1c;
+    padding: 20px;
+    border-radius: 12px;
+    margin-bottom: 20px;
+}
+
+input {
+    padding: 10px;
+    width: 100%;
+    margin-bottom: 10px;
+    border-radius: 6px;
+    border: none;
+}
+
+button {
+    padding: 10px 15px;
+    border-radius: 6px;
+    border: none;
+    background: #007bff;
+    color: white;
+    cursor: pointer;
+}
+
+button:hover {
+    background: #0056b3;
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 15px;
+}
+
+td, th {
+    border: 1px solid #333;
+    padding: 8px;
+    text-align: center;
+}
+</style>
+</head>
+
+<body>
+
+<div class="navbar">
+    <div class="logo">🚀 Metocart AI</div>
+</div>
+
+<div class="dashboard">
+
+<div class="section">
+<h2>📊 Budget-Based Business Plan Generator</h2>
+<input type="text" id="idea" placeholder="Enter Business Idea">
+<input type="number" id="budget" placeholder="Enter Budget (₹)">
+<button onclick="generatePlan()">Generate Business Plan</button>
+<div id="planOutput"></div>
+</div>
+
+<div class="section">
+<h2>💰 Profit Estimation Calculator</h2>
+<input type="number" id="investment" placeholder="Initial Investment">
+<input type="number" id="monthlyRevenue" placeholder="Expected Monthly Revenue">
+<input type="number" id="monthlyCost" placeholder="Monthly Operating Cost">
+<button onclick="calculateProfit()">Calculate Profit</button>
+
+<div id="profitTable"></div>
+</div>
+
+<div class="section">
+<h2>🎤 Investor Pitch Generator</h2>
+<button onclick="generatePitch()">Generate Investor Pitch</button>
+<div id="pitchOutput"></div>
+</div>
+
+<div class="section">
+<h2>📺 YouTube Business Channel Strategy</h2>
+<button onclick="generateVideoPlan()">Generate Video Strategy</button>
+<div id="videoOutput"></div>
+</div>
+
+</div>
+
+<script>
+const API_KEY = "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";
+
+async function generatePlan() {
+    const idea = document.getElementById("idea").value;
+    const budget = document.getElementById("budget").value;
+
+    const prompt = `
+Create a professional business plan for "${idea}" with total budget ₹${budget}.
+Include revenue model, cost breakdown, market strategy, and profit margin.
+`;
+
+    sendToAI(prompt, "planOutput");
+}
+
+async function generatePitch() {
+    const idea = document.getElementById("idea").value;
+    const prompt = `Create a strong investor pitch for "${idea}" business.`;
+    sendToAI(prompt, "pitchOutput");
+}
+
+async function generateVideoPlan() {
+    const idea = document.getElementById("idea").value;
+    const prompt = `Create a YouTube content strategy for promoting "${idea}" business.`;
+    sendToAI(prompt, "videoOutput");
+}
+
+async function sendToAI(prompt, outputId) {
+    const response = await fetch("https://api.groq.com/openai/v1/chat/completions", {
+        method: "POST",
+        headers: {
+            "Authorization": "Bearer " + API_KEY,
+            "Content-Type": "application/json"
+        },
+        body: JSON.stringify({
+            model: "llama-3.1-8b-instant",
+            messages: [{ role: "user", content: prompt }]
+        })
+    });
+
+    const data = await response.json();
+    document.getElementById(outputId).innerHTML =
+        data.choices[0].message.content.replace(/\n/g, "<br>");
+}
+
+function calculateProfit() {
+    const investment = parseFloat(document.getElementById("investment").value);
+    const revenue = parseFloat(document.getElementById("monthlyRevenue").value);
+    const cost = parseFloat(document.getElementById("monthlyCost").value);
+
+    const monthlyProfit = revenue - cost;
+    const yearlyProfit = monthlyProfit * 12;
+    const breakEvenMonths = investment / monthlyProfit;
+
+    document.getElementById("profitTable").innerHTML = `
+        <table>
+            <tr><th>Monthly Profit</th><td>₹${monthlyProfit}</td></tr>
+            <tr><th>Yearly Profit</th><td>₹${yearlyProfit}</td></tr>
+            <tr><th>Break-even Time</th><td>${breakEvenMonths.toFixed(1)} months</td></tr>
+        </table>
+    `;
+}
+</script>
+
+</body>
+</html>";
+
+async function generatePlan() {
+    const idea = document.getElementById("idea").value;
+    const budget = document.getElementById("budget").value;
+
+    const prompt = `
+Create a professional business plan for "${idea}" with total budget ₹${budget}.
+Include revenue model, cost breakdown, market strategy, and profit margin.
+`;
+
+    sendToAI(prompt, "planOutput");
+}
+
+async function generatePitch() {
+    const idea = document.getElementById("idea").value;
+    const prompt = `Create a strong investor pitch for "${idea}" business.`;
+    sendToAI(prompt, "pitchOutput");
+}
+
+async function generateVideoPlan() {
+    const idea = document.getElementById("idea").value;
+    const prompt = `Create a YouTube content strategy for promoting "${idea}" business.`;
+    sendToAI(prompt, "videoOutput");
+}
+
+async function sendToAI(prompt, outputId) {
+    const response = await fetch("https://api.groq.com/openai/v1/chat/completions", {
+        method: "POST",
+        headers: {
+            "Authorization": "Bearer " + API_KEY,
+            "Content-Type": "application/json"
+        },
+        body: JSON.stringify({
+            model: "llama-3.1-8b-instant",
+            messages: [{ role: "user", content: prompt }]
+        })
+    });
+
+    const data = await response.json();
+    document.getElementById(outputId).innerHTML =
+        data.choices[0].message.content.replace(/\n/g, "<br>");
+}
+
+function calculateProfit() {
+    const investment = parseFloat(document.getElementById("investment").value);
+    const revenue = parseFloat(document.getElementById("monthlyRevenue").value);
+    const cost = parseFloat(document.getElementById("monthlyCost").value);
+
+    const monthlyProfit = revenue - cost;
+    const yearlyProfit = monthlyProfit * 12;
+    const breakEvenMonths = investment / monthlyProfit;
+
+    document.getElementById("profitTable").innerHTML = `
+        <table>
+            <tr><th>Monthly Profit</th><td>₹${monthlyProfit}</td></tr>
+            <tr><th>Yearly Profit</th><td>₹${yearlyProfit}</td></tr>
+            <tr><th>Break-even Time</th><td>${breakEvenMonths.toFixed(1)} months</td></tr>
+        </table>
+    `;
+}
 </script>
 
 </body>
