--- a/index.html
+++ b/index.html
@@ -1,53 +1,53 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Metocart AI - Business Intelligence Platform</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Metocart AI - Business Intelligence Platform</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
 body {
-    font-family: 'Segoe UI', sans-serif;
     margin: 0;
-    padding: 0;
-    background: #0f2027;
+    font-family: 'Segoe UI', sans-serif;
+    background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
     color: white;
 }
 
 .navbar {
-    display: flex;
-    justify-content: space-between;
     padding: 15px 30px;
-    background: #111;
-}
-
-.logo {
+    background: rgba(0,0,0,0.8);
     font-weight: bold;
 }
 
 .dashboard {
-    padding: 30px;
-    max-width: 1200px;
+    max-width: 1000px;
     margin: auto;
+    padding: 30px;
 }
 
 .section {
-    background: #1c1c1c;
+    background: rgba(255,255,255,0.08);
+    backdrop-filter: blur(10px);
     padding: 20px;
-    border-radius: 12px;
-    margin-bottom: 20px;
+    border-radius: 15px;
+    margin-bottom: 25px;
+}
+
+.section h2 {
+    margin-top: 0;
 }
 
 input {
-    padding: 10px;
     width: 100%;
-    margin-bottom: 10px;
-    border-radius: 6px;
+    padding: 12px;
+    margin-bottom: 12px;
+    border-radius: 8px;
     border: none;
+    font-size: 14px;
 }
 
 button {
-    padding: 10px 15px;
-    border-radius: 6px;
+    padding: 10px 16px;
+    border-radius: 8px;
     border: none;
     background: #007bff;
     color: white;
@@ -58,119 +58,12 @@ button:hover {
     background: #0056b3;
 }
 
-table {
-    width: 100%;
-    border-collapse: collapse;
+.output {
     margin-top: 15px;
-}
-
-td, th {
-    border: 1px solid #333;
-    padding: 8px;
-    text-align: center;
-}
-</style>
-</head>
-
-<body>
-
-<div class="navbar">
-    <div class="logo">🚀 Metocart AI</div>
-</div>
-
-<div class="dashboard">
-
-<div class="section">
-<h2>📊 Budget-Based Business Plan Generator</h2>
-<input type="text" id="idea" placeholder="Enter Business Idea">
-<input type="number" id="budget" placeholder="Enter Budget (₹)">
-<button onclick="generatePlan()">Generate Business Plan</button>
-<div id="planOutput"></div>
-</div>
-
-<div class="section">
-<h2>💰 Profit Estimation Calculator</h2>
-<input type="number" id="investment" placeholder="Initial Investment">
-<input type="number" id="monthlyRevenue" placeholder="Expected Monthly Revenue">
-<input type="number" id="monthlyCost" placeholder="Monthly Operating Cost">
-<button onclick="calculateProfit()">Calculate Profit</button>
-
-<div id="profitTable"></div>
-</div>
-
-<div class="section">
-<h2>🎤 Investor Pitch Generator</h2>
-<button onclick="generatePitch()">Generate Investor Pitch</button>
-<div id="pitchOutput"></div>
-</div>
-
-<div class="section">
-<h2>📺 YouTube Business Channel Strategy</h2>
-<button onclick="generateVideoPlan()">Generate Video Strategy</button>
-<div id="videoOutput"></div>
-</div>
-
-</div>
-
-<script>
-const API_KEY = "<!DOCTYPE html>
-<html>
-<head>
-    <title>Metocart AI - Business Intelligence Platform</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-<style>
-body {
-    font-family: 'Segoe UI', sans-serif;
-    margin: 0;
-    padding: 0;
-    background: #0f2027;
-    color: white;
-}
-
-.navbar {
-    display: flex;
-    justify-content: space-between;
-    padding: 15px 30px;
-    background: #111;
-}
-
-.logo {
-    font-weight: bold;
-}
-
-.dashboard {
-    padding: 30px;
-    max-width: 1200px;
-    margin: auto;
-}
-
-.section {
-    background: #1c1c1c;
-    padding: 20px;
-    border-radius: 12px;
-    margin-bottom: 20px;
-}
-
-input {
-    padding: 10px;
-    width: 100%;
-    margin-bottom: 10px;
-    border-radius: 6px;
-    border: none;
-}
-
-button {
-    padding: 10px 15px;
-    border-radius: 6px;
-    border: none;
-    background: #007bff;
-    color: white;
-    cursor: pointer;
-}
-
-button:hover {
-    background: #0056b3;
+    background: rgba(0,0,0,0.4);
+    padding: 15px;
+    border-radius: 10px;
+    font-size: 14px;
 }
 
 table {
@@ -180,7 +73,7 @@ table {
 }
 
 td, th {
-    border: 1px solid #333;
+    border: 1px solid #444;
     padding: 8px;
     text-align: center;
 }
@@ -189,87 +82,95 @@ td, th {
 
 <body>
 
-<div class="navbar">
-    <div class="logo">🚀 Metocart AI</div>
-</div>
+<div class="navbar">🚀 Metocart AI - Business Intelligence Dashboard</div>
 
 <div class="dashboard">
 
 <div class="section">
-<h2>📊 Budget-Based Business Plan Generator</h2>
+<h2>📊 Budget-Based Business Plan</h2>
 <input type="text" id="idea" placeholder="Enter Business Idea">
 <input type="number" id="budget" placeholder="Enter Budget (₹)">
 <button onclick="generatePlan()">Generate Business Plan</button>
-<div id="planOutput"></div>
+<div id="planOutput" class="output"></div>
 </div>
 
 <div class="section">
 <h2>💰 Profit Estimation Calculator</h2>
 <input type="number" id="investment" placeholder="Initial Investment">
-<input type="number" id="monthlyRevenue" placeholder="Expected Monthly Revenue">
-<input type="number" id="monthlyCost" placeholder="Monthly Operating Cost">
+<input type="number" id="monthlyRevenue" placeholder="Monthly Revenue">
+<input type="number" id="monthlyCost" placeholder="Monthly Cost">
 <button onclick="calculateProfit()">Calculate Profit</button>
-
-<div id="profitTable"></div>
+<div id="profitOutput" class="output"></div>
 </div>
 
 <div class="section">
 <h2>🎤 Investor Pitch Generator</h2>
-<button onclick="generatePitch()">Generate Investor Pitch</button>
-<div id="pitchOutput"></div>
+<button onclick="generatePitch()">Generate Pitch</button>
+<div id="pitchOutput" class="output"></div>
 </div>
 
 <div class="section">
-<h2>📺 YouTube Business Channel Strategy</h2>
-<button onclick="generateVideoPlan()">Generate Video Strategy</button>
-<div id="videoOutput"></div>
+<h2>📺 YouTube Strategy</h2>
+<button onclick="generateVideoPlan()">Generate Strategy</button>
+<div id="videoOutput" class="output"></div>
 </div>
 
 </div>
 
 <script>
+
 const API_KEY = "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";
 
-async function generatePlan() {
+async function sendToAI(prompt, outputId) {
+
+    document.getElementById(outputId).innerHTML = "Generating...";
+
+    try {
+        const response = await fetch("https://api.groq.com/openai/v1/chat/completions", {
+            method: "POST",
+            headers: {
+                "Authorization": "Bearer " + API_KEY,
+                "Content-Type": "application/json"
+            },
+            body: JSON.stringify({
+                model: "llama-3.1-8b-instant",
+                messages: [
+                    { role: "system", content: "You are a professional business consultant." },
+                    { role: "user", content: prompt }
+                ]
+            })
+        });
+
+        const data = await response.json();
+
+        document.getElementById(outputId).innerHTML =
+            data.choices[0].message.content.replace(/\n/g, "<br>");
+
+    } catch (error) {
+        document.getElementById(outputId).innerHTML = "Error generating response.";
+    }
+}
+
+function generatePlan() {
     const idea = document.getElementById("idea").value;
     const budget = document.getElementById("budget").value;
 
-    const prompt = `
-Create a professional business plan for "${idea}" with total budget ₹${budget}.
-Include revenue model, cost breakdown, market strategy, and profit margin.
-`;
+    const prompt = `Create a professional business plan for "${idea}" with total budget ₹${budget}.
+Include revenue model, cost breakdown, marketing plan and projected profit.`;
 
     sendToAI(prompt, "planOutput");
 }
 
-async function generatePitch() {
+function generatePitch() {
     const idea = document.getElementById("idea").value;
-    const prompt = `Create a strong investor pitch for "${idea}" business.`;
+    const prompt = `Create a powerful investor pitch for "${idea}" business.`;
     sendToAI(prompt, "pitchOutput");
 }
 
-async function generateVideoPlan() {
+function generateVideoPlan() {
     const idea = document.getElementById("idea").value;
-    const prompt = `Create a YouTube content strategy for promoting "${idea}" business.`;
+    const prompt = `Create a YouTube marketing strategy for "${idea}" business.`;
     sendToAI(prompt, "videoOutput");
-}
-
-async function sendToAI(prompt, outputId) {
-    const response = await fetch("https://api.groq.com/openai/v1/chat/completions", {
-        method: "POST",
-        headers: {
-            "Authorization": "Bearer " + API_KEY,
-            "Content-Type": "application/json"
-        },
-        body: JSON.stringify({
-            model: "llama-3.1-8b-instant",
-            messages: [{ role: "user", content: prompt }]
-        })
-    });
-
-    const data = await response.json();
-    document.getElementById(outputId).innerHTML =
-        data.choices[0].message.content.replace(/\n/g, "<br>");
 }
 
 function calculateProfit() {
@@ -277,82 +178,24 @@ function calculateProfit() {
     const revenue = parseFloat(document.getElementById("monthlyRevenue").value);
     const cost = parseFloat(document.getElementById("monthlyCost").value);
 
-    const monthlyProfit = revenue - cost;
-    const yearlyProfit = monthlyProfit * 12;
-    const breakEvenMonths = investment / monthlyProfit;
-
-    document.getElementById("profitTable").innerHTML = `
-        <table>
-            <tr><th>Monthly Profit</th><td>₹${monthlyProfit}</td></tr>
-            <tr><th>Yearly Profit</th><td>₹${yearlyProfit}</td></tr>
-            <tr><th>Break-even Time</th><td>${breakEvenMonths.toFixed(1)} months</td></tr>
-        </table>
-    `;
-}
-</script>
-
-</body>
-</html>";
-
-async function generatePlan() {
-    const idea = document.getElementById("idea").value;
-    const budget = document.getElementById("budget").value;
-
-    const prompt = `
-Create a professional business plan for "${idea}" with total budget ₹${budget}.
-Include revenue model, cost breakdown, market strategy, and profit margin.
-`;
-
-    sendToAI(prompt, "planOutput");
-}
-
-async function generatePitch() {
-    const idea = document.getElementById("idea").value;
-    const prompt = `Create a strong investor pitch for "${idea}" business.`;
-    sendToAI(prompt, "pitchOutput");
-}
-
-async function generateVideoPlan() {
-    const idea = document.getElementById("idea").value;
-    const prompt = `Create a YouTube content strategy for promoting "${idea}" business.`;
-    sendToAI(prompt, "videoOutput");
-}
-
-async function sendToAI(prompt, outputId) {
-    const response = await fetch("https://api.groq.com/openai/v1/chat/completions", {
-        method: "POST",
-        headers: {
-            "Authorization": "Bearer " + API_KEY,
-            "Content-Type": "application/json"
-        },
-        body: JSON.stringify({
-            model: "llama-3.1-8b-instant",
-            messages: [{ role: "user", content: prompt }]
-        })
-    });
-
-    const data = await response.json();
-    document.getElementById(outputId).innerHTML =
-        data.choices[0].message.content.replace(/\n/g, "<br>");
-}
-
-function calculateProfit() {
-    const investment = parseFloat(document.getElementById("investment").value);
-    const revenue = parseFloat(document.getElementById("monthlyRevenue").value);
-    const cost = parseFloat(document.getElementById("monthlyCost").value);
+    if (!investment || !revenue || !cost) {
+        document.getElementById("profitOutput").innerHTML = "Please fill all fields.";
+        return;
+    }
 
     const monthlyProfit = revenue - cost;
     const yearlyProfit = monthlyProfit * 12;
-    const breakEvenMonths = investment / monthlyProfit;
+    const breakEven = (investment / monthlyProfit).toFixed(1);
 
-    document.getElementById("profitTable").innerHTML = `
+    document.getElementById("profitOutput").innerHTML = `
         <table>
             <tr><th>Monthly Profit</th><td>₹${monthlyProfit}</td></tr>
             <tr><th>Yearly Profit</th><td>₹${yearlyProfit}</td></tr>
-            <tr><th>Break-even Time</th><td>${breakEvenMonths.toFixed(1)} months</td></tr>
+            <tr><th>Break-even Time</th><td>${breakEven} months</td></tr>
         </table>
     `;
 }
+
 </script>
 
 </body>
